small-position-changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div id="slogan">popular photos to inspire you to greatness.</div>
             <input type="text" id="tagsearch" required placeholder="search by tag(i.e. fashion)" maxlength="30" autofocus />
             <input type="button" id="popular" value="popular" />
-            <input type="button" id="go" value="Search" />
+            <input type="button" id="go" value="search" />
         </div>
         <div class="pixGallery">
         	<div class="outline">
@@ -83,9 +83,29 @@
             	<a class="imglink" href="#"><img src="images/samples/orange.png" class="instaImgs" rel="group"></a>
                 <div class="caption">This is where the caption will go</div>
             </div>
+                        <div class="outline">
+            	<a class="imglink" href="#"><img src="images/samples/red.png" class="instaImgs" rel="group"></a>
+                <div class="caption">This is where the caption will go</div>
+            </div>
+            <div class="outline">
+            	<a class="imglink" href="#"><img src="images/samples/yellow.png" class="instaImgs" rel="group"></a>
+                <div class="caption">This is where the caption will go</div>
+            </div>
+            <div class="outline">
+            	<a class="imglink" href="#"><img src="images/samples/green.png" class="instaImgs" rel="group"></a>
+                <div class="caption">This is where the caption will go</div>
+            </div>
+            <div class="outline">
+            	<a class="imglink" href="#"><img src="images/samples/blue.png" class="instaImgs" rel="group"></a>
+                <div class="caption">This is where the caption will go</div>
+            </div>
+            <div class="outline">
+            	<a class="imglink" href="#"><img src="images/samples/orange.png" class="instaImgs" rel="group"></a>
+                <div class="caption">This is where the caption will go</div>
+            </div>
         </div>
         <div id="footer">
-        	<p>Designed using</p> 
+        	<p>designed using</p> 
             <div id="instaHolder">
             	<a href="http://www.instagram.com">
                 <img src="images/instagram.png" id="instaLogo" alt="Instagram" /></a>
