--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         	<div id="logo"></div>
             <div id="slogan">popular photos to inspire you to greatness.</div>
             <input type="text" id="tagsearch" required placeholder="search by tag(i.e. fashion)" maxlength="30" autofocus />
-            <input type="button" id="popular" value="popular" />
-            <input type="button" id="go" value="search" />
+            <input type="button" class="popular" value="popular" />
+            <input type="button" class="go" value="search" />
         </div>
         <div class="pixGallery">
         	<div class="outline">
