--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <title>inspire.me | Popular Photos</title>
 	<link href="css/reset.css" type="text/css" rel="stylesheet" />
 	<link href="css/inspire.css" type="text/css" rel="stylesheet" />
-    <link href="js/jquery.fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
+    <link href="js/fancyBox/source/jquery.fancybox.css" type="text/css" rel="stylesheet" media="screen" />
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="js/jquery.fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+    <script src="js/fancyBox/source/jquery.fancybox.pack.js" type="text/javascript"></script>
 	<script src="js/app.js"></script>
 	<script src="//use.typekit.net/rlq5blm.js"></script>
 	<script>try{Typekit.load();}catch(e){}</script>
